--- a/Fall 19/270A/HW3/hw3.tex
+++ b/Fall 19/270A/HW3/hw3.tex
@@ -259,7 +259,7 @@ in probability but not a.s.
 	\begin{align*}
 		\sum_{n=2}^\infty \Prob[X_n = n] &= \sum_{n=2}^\infty \frac{1}{2n\log n} = +\infty.
 	\end{align*}
-	Since the $X_n$'s are independent, Borel-Cantelli tells us that $\Prob[X_n = n\text{ infinitely often}] = 1$. Consequently, the $X_n/n = 1$ infinitely often, so the sum $\frac{1}{n}\sum_{k=2}^{n+1}X_n$ cannot converge.
+	Since the $X_n$'s are independent, Borel-Cantelli tells us that $\Prob[X_n = n\text{ infinitely often}] = 1$. Consequently, $X_n/n = 1$ infinitely often, so the sum $\frac{1}{n}\sum_{k=2}^{n+1}X_n$ cannot converge to zero.
 \end{proof}
 
 \end{document}
