--- a/Fall 19/271A/HW5/hw5.tex
+++ b/Fall 19/271A/HW5/hw5.tex
@@ -183,7 +183,7 @@ for some parameter $H\in (0,1)$. Compute $\E[S_n]$.
 	\begin{align*}
 		\E[d_n(j)^2] &= -2^{n(2H+1)-1}\int_\reals\int_\reals\psi(s)\psi(t)|t-s|^{2H}\ dtds.
 	\end{align*}
-	The function $(s,t)\mapsto |t-s|^{2H}$ is symmetric about the line $s = t$ and its level sets $|t-s|^{2H} = c$ are pairs of parallel lines that themselves run parallel to the line $s = t$. The product $\psi(s)\psi(t)$ is nonnegative in the squares $[-1, -1/2) \times [-1, -1/2)$ and $(-1/2, 0]\times (-1/2, 0]$ of the $s$-$t$ plane. Conversely, the product is negative in the squares $[-1, -1/2)\times (-1/2, 0]$ and $(-1/2, 0]\times [-1, -1/2)$. In terms of the diagram in figure lmao, our integral becomes
+	The function $(s,t)\mapsto |t-s|^{2H}$ is symmetric about the line $s = t$ and its level sets $|t-s|^{2H} = c$ are pairs of parallel lines that themselves run parallel to the line $s = t$. The product $\psi(s)\psi(t)$ is nonnegative in the squares $[-1, -1/2) \times [-1, -1/2)$ and $(-1/2, 0]\times (-1/2, 0]$ of the $s$-$t$ plane. Conversely, the product is negative in the squares $[-1, -1/2)\times (-1/2, 0]$ and $(-1/2, 0]\times [-1, -1/2)$. In terms of the diagram in Figure 1, our integral becomes
 	\begin{align*}
 		\E[d_n(j)^2] &= -2^{n(2H+2) - 1}\left(4\int_{R_1}|t-s|^{2H}\ dA - 2\int_{R_2}|t-s|^{2H}\ dA \right)\\
 		&= -2^{n(2H+2) - 1}\left(4\int_{-1/2}^0\int_s^0(t-s)^{2H}\ dA - 2\int_{-1}^{-1/2}\int_{-1/2}^0(t-s)^{2H}\ dA \right)\\
