--- a/Winter 20/175/3_1_DoubleCountingInclusionExclusion/doublecount.tex
+++ b/Winter 20/175/3_1_DoubleCountingInclusionExclusion/doublecount.tex
@@ -55,7 +55,7 @@
 	\]
 	\vfill
 
-	\item Prove that $(x+y)^p \equiv 0 \pmod{p}$, where $p$ is a prime.
+	\item Prove that $(x+y)^p \equiv x^p+y^p \pmod{p}$, where $p$ is a prime.
 	\vfill
 
 	\item Let $n$ and $k$ be positive integers and let $S$ be a set of $n$ points in the plane such that no three points of $S$ are colinear and for every point $P$ of $S$ there are at least $k$ points of $S$ equidistant from $P$. Use these steps to prove that
