--- a/Winter 20/173B/HW3/hw3.tex
+++ b/Winter 20/173B/HW3/hw3.tex
@@ -40,14 +40,34 @@
 \end{center}
 
 \begin{enumerate}
-	\item Suppose that all of the two element subsets of $[6]$ are colored red or blue. Prove that there is a three element set, all of whose two element subsets have the same color. Show that this is not true for $[5]$.
+	\item There are twenty-five beads in a bag, each colored red, blue or green. Prove that there are at least nine beads of the same color.
 	\vfill
 
-	\item Let $G = (V, E)$ be a graph. Show that
+	\item Let $A = \{a_1, a_2, a_3, a_4, a_5\}$ be a set of five positive integers. Show that for any permutation $a_{i_1}, a_{i_2}, a_{i_3}, a_{i_4}, a_{i_5}$ of $A$, the product
 	\[
-	\sum_{v\in V}d(v) = 2\cdot |E|,
+	(a_{i_1}-a_1)(a_{i_2}-a_2)(a_{i_3}-a_3)(a_{i_4}-a_4)(a_{i_5}-a_5).
 	\]
-	where $d(v)$ is the degree of the vertex $v$.
+	is always even.
+	\vfill
+	\item Let $K_n$ be the complete graph on $n$ vertices, i.e. the graph with $n$ vertices where every pair of vertices is connected by an edge. 
+	\begin{enumerate}
+		\item Suppose we color each edge of $K_6$ either red or blue. Prove that there is at least one monochromatic triangle. A triangle is monochromatic if all of its edges have the same color.
+		\item Is part (a) still true for $K_5$?
+		\item Prove that in any coloring of $K_6$ we actually have at least \textit{two} monochromatic triangles. \textit{Hint: Count the complement.}
+	\end{enumerate}
+	\vfill
+
+	\item \begin{enumerate}
+		\item Is it possible to cover a chessboard (an 8 by 8 grid where squares alternate between two colors) with dominoes that cover exactly two squares?
+		\item What if we delete two white squares?
+	\end{enumerate}
+
+	\vfill
+	
+	\item \begin{enumerate}
+		\item Let $A$ be a set of $m$ positive integers where $m\geq 1$. Show that there exists a nonempty subset $B$ of $A$ such that the sum $\sum_{x\in B}x$ is divisible by $m$.
+		\item Let $X\subseteq \{1, 2, \ldots, 99\}$ and $|X| = 10$. Show that it is possible to select two disjoint nonempty proper subsets $Y, Z$ of $X$ such that $\sum_{y\in Y}y = \sum_{z\in Z}z$.
+	\end{enumerate}
 	\vfill
 \end{enumerate}
 
